--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,6 +99,77 @@ a {
     background-color: #c82333;
 }
 
+/*nav*/
+
+.header {
+  background-color: var(--foreground-dark);
+  padding: 20px 0;
+  box-shadow: var(--box-shadow);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container {
+    margin: 0 30px;
+}
+
+.logo {
+  font-size: 1.8em;
+  font-weight: 700;
+  color: var(--primary-color);
+  display: flex;
+  align-items: center;
+}
+.logo-icon {
+  margin-right: 10px;
+  font-size: 1.2em;
+}
+.nav-menu {
+  list-style: none;
+  display: flex;
+}
+.nav-menu li {
+  margin-left: 30px;
+}
+.nav-menu a {
+  color: var(--text);
+  font-weight: 600;
+  padding: 5px 0;
+  position: relative;
+  font-size: 20px;
+}
+
+
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  width: 30px;
+  height: 20px;
+  justify-content: space-between;
+}
+.menu-toggle span {
+  height: 2px;
+  background-color: var(--text-dark);
+  width: 100%;
+  transition: all var(--transition-speed) ease-in-out;
+}
+.menu-toggle.open span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.menu-toggle.open span:nth-child(2) {
+  opacity: 0;
+}
+.menu-toggle.open span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
 /* Card Sections (Student Info, Fees, History) */
 .student-info-card,
 .outstanding-fees-card,
@@ -198,7 +269,7 @@ a {
     background-color: #0056b3;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 970px) {
 
   /* General table reset for mobile card view */
   .fees-table {
@@ -252,6 +323,34 @@ a {
       margin-top: 10px;
       text-align: center;
   }
+
+  .nav-menu {
+            display: none;
+            flex-direction: column;
+            width: 100%;
+            background-color: var(--bg-light);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: absolute;
+            top: 70px; /* Adjust based on header height */
+            left: 0;
+            right: 0;
+            padding: 20px;
+            border-top: 1px solid #eee;
+            margin-top: 30px;
+          }
+
+          .nav-menu.open {
+            display: flex;
+          }
+
+          .nav-menu li {
+            margin: 10px 0;
+            text-align: center;
+          }
+
+          .menu-toggle {
+            display: flex;
+          }
 }
 
 @media (prefers-color-scheme: dark) {
