--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,7 +153,7 @@ a {
 }
 .menu-toggle span {
   height: 2px;
-  background-color: var(--text-dark);
+  background-color: var(--text);
   width: 100%;
   transition: all var(--transition-speed) ease-in-out;
 }
